--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "firebase": "^10.12.2",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "swr": "^2.2.5",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "sass": "^1.77.4",
+    "tailwindcss": "^3.4.4"
   }
 }
